# boomerang

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  FEDERATED_REACTORS_EXECPLAN.md  FEDERATED_REACTORS_RUNTIME_EXECPLAN.md  README.md  codecov.sh  codecov.yml  renovate.json  rust-toolchain.toml
boomerang/: Cargo.toml
boomerang/benches/: benchmark.rs  modal_modes.rs  modal_scheduler_perf.rs  physical_actions.rs  ping_pong.rs  port_bank.rs  savina_pong.rs
boomerang/examples/: action_delay.rs  action_values.rs  count.rs  cycle.rs  determinism.rs  gain.rs  hello.rs  hello_world.rs  hierarchy.rs  multiple_contained.rs  slowing_clock.rs
boomerang/examples/snake/: main.rs  support.rs
boomerang/src/: event.rs  flatten_transposed.rs  lib.rs  reaction.rs  reactor.rs  run.rs  scheduler.rs  static_federation.rs  trigger.rs
boomerang/src/builder/: action.rs  args.rs  env.rs  fqn.rs  graphviz.rs  macros.rs  mod.rs  port.rs  reaction.rs  reactor.rs  tests.rs
boomerang/src/old/: savina_pong.rs
boomerang/src/runtime/: action.rs  environment.rs  mod.rs  port.rs  reaction.rs  reactor.rs  scheduler.rs  time.rs
boomerang/src/tests/: mod.rs
boomerang/tests/: action_delay.rs  action_is_present.rs  action_values.rs  after.rs  async_callback.rs  connection_helpers.rs  connection_to_self_multiport.rs  count.rs  cycle.rs  delay_int.rs  determinism.rs  enclave_cycle.rs  federated_static.rs  fully_connected_addressable.rs  gain.rs  generic_after.rs  hello.rs  hello_distributed.rs  hello_world.rs  hierarchy.rs  microsteps.rs  microsteps_multiple_actions.rs  modal_actions.rs  modal_basic.rs  modal_count_3_modes.rs  modal_cycle_breaker.rs  modal_delayed_connections.rs  modal_mixed_reactions.rs  modal_multiport_bank.rs  modal_nested_reactions.rs  modal_physical_actions.rs  modal_reset_reactions.rs  modal_startup_shutdown.rs  modal_structural_syntax.rs  modal_timers.rs  multiple_contained.rs  multiport_fully_connected.rs  physical_action_with_keepalive.rs  port_bank_reaction.rs  savina_pong.rs  (+8 more)
boomerang_builder/: Cargo.toml  README.md
boomerang_builder/src/: action.rs  connection.rs  derive.rs  derive_support.rs  federation.rs  foo.rs  fqn.rs  graphviz.rs  inter_partition.rs  lib.rs  macro_support.rs  mode.rs  plantuml.rs  port.rs  reaction.rs  reactor.rs  tests.rs  util.rs
boomerang_builder/src/assembly/: build.rs  debug.rs  mod.rs  tests.rs
boomerang_builder/src/env/: build.rs  debug.rs  federated.rs  mod.rs  output.rs  serializer.rs  tests.rs
boomerang_builder/src/federated/: bindings.rs  codec.rs  lowering.rs  mod.rs
boomerang_builder/src/tests/: federated.rs  mod.rs
boomerang_core/: Cargo.toml
boomerang_core/src/: keys.rs  lib.rs  time.rs
boomerang_derive/: Cargo.toml
boomerang_derive/src/: builder.rs  detail.rs  lib.rs  parse.rs  reaction.rs  reactor.rs  reactor2.rs  reactor_macro.rs  reactor_ports.rs  util.rs
boomerang_derive/src/builder/: generate.rs  graph.rs  mod.rs
boomerang_derive/src/reaction/: from_defs.rs  mod.rs  output.rs  reaction_field_inner.rs  test.rs  tests.rs  trigger_inner.rs
boomerang_derive/src/reactor/: mod.rs  output.rs  tests.rs
boomerang_derive2/: Cargo.toml
boomerang_derive2/src/: lib.rs  reaction.rs  reactor.rs
boomerang_federated/: Cargo.toml  README.md
boomerang_federated/src/: client.rs  codec.rs  hierarchy.rs  lib.rs  protocol.rs  rti.rs  runtime.rs  runtime_bridge.rs  session.rs  static_runner.rs  test_trace.rs  tests.rs  transport.rs
boomerang_federated/src/client/: handler.rs  mod.rs  tests.rs
boomerang_federated/src/rti/: federate.rs  index.rs  mod.rs  start_time_sync.rs  tests.rs
boomerang_federated/src/util/: bincodec.rs  mod.rs  mpsc_sink.rs
boomerang_macros/: Cargo.toml
boomerang_macros/src/: lib.rs  ports.rs  reaction.rs  reactor.rs  time.rs  timer.rs  util.rs
boomerang_runtime/: Cargo.toml  README.md
boomerang_runtime/src/: action.rs  connection.rs  context.rs  data.rs  destructure.rs  disjoint.rs  enclave.rs  enclaves.rs  env.rs  event.rs  federated.rs  keepalive.rs  key_set.rs  lib.rs  partition.rs  port.rs  reaction.rs  reactor.rs  refs.rs  refs2.rs  refs_extract.rs  registry.rs  replay.rs  runtime_enclaves.rs  sched.rs  scheduler.rs  split.rs  store.rs  time.rs  util.rs
boomerang_runtime/src/action/: action_ref.rs  mod.rs  registry.rs  store.rs
boomerang_runtime/src/data/: macros.rs  mod.rs  registry.rs
boomerang_runtime/src/env/: debug.rs  inner.rs  mod.rs  tests.rs
boomerang_runtime/src/port/: mod.rs  registry.rs
boomerang_runtime/src/sched/: barrier.rs  common.rs  context.rs  fed.rs  mod.rs  modal.rs  nonfed.rs  queue.rs
boomerang_runtime/tests/: enclaves_module.rs  test.rs  test2.rs
boomerang_tinymap/: Cargo.toml  README.md
boomerang_tinymap/src/: chunks.rs  key_set.rs  lib.rs  map.rs  secondary.rs  secondary_map.rs  secondary_set.rs  tinymap.rs
boomerang_tinymap/src/key_set/: mod.rs  serde_impl.rs
boomerang_tinymap/src/map/: chunks.rs  iter_many.rs  mod.rs
boomerang_tinymap/src/secondary_map/: iter_many.rs  mod.rs  par_iter.rs  serde_impl.rs
boomerang_util/: Cargo.toml  README.md
boomerang_util/examples/: keyboard.rs
boomerang_util/src/: keyboard_events.rs  lib.rs  recorder.rs  run.rs  runner.rs  test_tracing.rs  timeout.rs
boomerang_util/src/lidar/: mod.rs  ouster.rs  pcap.rs
boomerang_util/src/recrep/: mod.rs  recorder.rs  replayer.rs
boomerang_util/src/replay/: mod.rs  recorder.rs  replayer.rs
examples/snake/: Cargo.toml  README.md  main.rs
examples/snake/examples/: keyboard.rs
examples/snake/src/: keyboard.rs  keyboard_events.rs  main.rs  support.rs
tests-integration/: Cargo.toml
tests-integration/benches/: benchmark.rs  ping_pong.rs
tests-integration/examples/snake/: main.rs  (+1 more)
tests-integration/tests/: action_delay.rs  action_values.rs  async_callback.rs  connection_to_self_multiport.rs  count.rs  cycle.rs  determinism.rs  gain.rs  hello.rs  hello_world.rs  hierarchy.rs  multiple_contained.rs  multiport_fully_connected.rs  physical_action_with_keepalive.rs  slowing_clock.rs  slowing_clock_physical.rs  threading_multiport.rs
(+104 files in other folders)
