[workspace.package]
description = "Deterministic Middleware for Robotics"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["John Hughes <jondo2010@gmail.com>"]
repository = "https://github.com/jondo2010/boomerang"
keywords = [
    "reactors",
    "actor",
    "model",
    "deterministic",
    "concurrency",
    "middleware",
    "robotics",
]
categories = []
readme = "README.md"
exclude = ['.gitignore', '.cargo/config', '.vscode', '.devcontainer', '.github']

[workspace.dependencies]
arrow = { version = "52", default-features = false }
anyhow = "1.0"
document-features = "0.2"
itertools = "0.13"
thiserror = "1.0"
tracing = "0.1"
serde = "1.0"
serde_arrow = { version = "0.11", features = ["arrow-52"] }
erased-serde = "0.4"
rayon = "1.10"

# Local crates
boomerang = { path = "boomerang" }
boomerang_derive = { path = "boomerang_derive" }
boomerang_runtime = { path = "boomerang_runtime", default-features = false }
boomerang_tinymap = { path = "boomerang_tinymap" }
boomerang_util = { path = "boomerang_util" }
tinymap = { package = "boomerang_tinymap", path = "boomerang_tinymap" }

[workspace]
members = [
    "boomerang",
    "boomerang_derive",
    "boomerang_runtime",
    "boomerang_tinymap",
    "tests-integration",
]
resolver = "2"

[profile.profiling]
inherits = "release"
debug = true

[patch.crates-io]
fixedbitset = { git = "https://github.com/jondo2010/fixedbitset", branch = "ones_derive_clone" }
