[workspace.package]
description = "Deterministic Middleware for Robotics"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["John Hughes <jondo2010@gmail.com>"]
repository = "https://github.com/jondo2010/boomerang"
keywords = ["actor", "deterministic", "concurrency", "middleware", "robotics"]
categories = []
readme = "README.md"
exclude = ['.gitignore', '.cargo/config', '.vscode', '.devcontainer', '.github']

[workspace.dependencies]
anyhow = "1.0"
time = { version = "0.3", features = [] }
document-features = "0.2"
erased-serde = "0.4"
itertools = "0.13"
rayon = "1.10"
serde = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "json",
    "env-filter",
] }
tracing-tracy = { version = "0.11", features = ["flush-on-exit"] }
variadics_please = "1.1"

# Local crates
boomerang = { path = "boomerang", version = "0.3.0" }
boomerang_runtime = { path = "boomerang_runtime", version = "0.3.0" }
boomerang_tinymap = { path = "boomerang_tinymap", version = "0.3.0" }
boomerang_util = { path = "boomerang_util", version = "0.3.0" }
boomerang_builder = { path = "boomerang_builder", version = "0.3.0" }
boomerang_macros = { path = "boomerang_macros", version = "0.3.0" }
tinymap = { package = "boomerang_tinymap", path = "boomerang_tinymap", version = "0.3.0" }

[workspace]
members = [
    "boomerang",
    "boomerang_builder",
    "boomerang_macros",
    "boomerang_runtime",
    "boomerang_tinymap",
    "examples/snake",
]
resolver = "2"

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = 3

[patch.crates-io]
