[package]
name = "boomerang"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true
repository.workspace = true
categories.workspace = true

[features]
default = [
    "derive",
    #"parallel"
]

## Procedural macro support for generating code from reactor models
derive = ["dep:boomerang_derive"]

# Support for serialization
serde = ["boomerang_runtime/serde"]

## Execute reactors in parallel on a thread pool
parallel = ["boomerang_runtime/parallel"]

## Support generating graphviz diagrams from reactor models
graphviz = ["boomerang_builder/graphviz"]

## Support for recording and replaying
replay = ["boomerang_runtime/replay"]

[dependencies]
document-features = { workspace = true }
thiserror.workspace = true

# repo dependencies
boomerang_builder = { workspace = true }
boomerang_derive = { workspace = true, optional = true }
boomerang_runtime = { workspace = true }

[dev-dependencies]
boomerang_util = { path = "../boomerang_util", features = ["runner"] }
criterion = "0.6"
serde = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tracy = { workspace = true }

# Deps for Snake example
[target.'cfg(not(windows))'.dev-dependencies]
termcolor = { version = "1.2" }
rand = { version = "0.8" }

[[bench]]
name = "ping_pong"
harness = false

[[bench]]
name = "physical_actions"
harness = false
