[package]
name = "boomerang"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true
repository.workspace = true
categories.workspace = true

[features]
default = []

# Support for serialization
serde = ["boomerang_runtime/serde"]

## Execute reactions in parallel on a thread pool
parallel = ["boomerang_runtime/parallel"]


## Support for recording and replaying
replay = ["boomerang_runtime/replay", "boomerang_builder/replay"]

[dependencies]
document-features = { workspace = true }
thiserror.workspace = true

# repo dependencies
boomerang_builder = { workspace = true }
boomerang_runtime = { workspace = true }
boomerang_macros = { workspace = true }


[dev-dependencies]
boomerang_util = { path = "../boomerang_util", features = ["runner", "replay"] }
criterion = "0.8"
serde = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tracy = { workspace = true }

# Deps for Snake example
[target.'cfg(not(windows))'.dev-dependencies]
termcolor = { version = "1.2" }
rand = { version = "0.9" }
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }

[[bench]]
name = "ping_pong"
harness = false

[[bench]]
name = "physical_actions"
harness = false

[[bench]]
name = "port_bank"
harness = false
