[package]
name = "boomerang_builder"
description = "The Reactor assembly API for Boomerang."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
exclude.workspace = true

[features]
default = ["graphviz", "replay"]

## Support generating graphviz diagrams from reactor models
graphviz = ["dep:graphviz-rust"]

## Support for tracing with Tracy
tracy = ["tracing-tracy/enable"]

## Support for recording and replaying events
replay = ["dep:serde"]

[dependencies]
document-features = { workspace = true }
graphviz-rust = { version = "0.6", optional = true }
itertools.workspace = true
petgraph = "0.6"
slotmap = { version = "1.0", features = ["unstable"] }
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, optional = true }

boomerang_derive = { workspace = true, optional = true }
boomerang_runtime = { workspace = true }
tinymap.workspace = true

[dev-dependencies]
anyhow.workspace = true
rayon.workspace = true
tracing-subscriber.workspace = true
tracing-tracy = { workspace = true }

boomerang_runtime = { workspace = true }
