[package]
name = "boomerang_builder"
description = "The Reactor assembly API for Boomerang."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
exclude.workspace = true

[features]
default = []

## Support for tracing with Tracy
tracy = ["tracing-tracy/enable"]

## Support for recording and replaying events
replay = ["dep:serde"]


[dependencies]
document-features = { workspace = true }
itertools.workspace = true
petgraph = "0.8"
slotmap = { version = "1.0", features = ["unstable"] }
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, optional = true }
variadics_please.workspace = true

# repo dependencies
boomerang_runtime = { workspace = true }
tinymap.workspace = true

[dev-dependencies]
anyhow.workspace = true
tracing-subscriber.workspace = true
tracing-tracy = { workspace = true }

boomerang_runtime = { workspace = true }
