[package]
name = 'boomerang_derive'
description = 'Derive macro parsing, analysis and code generation for Boomerang'
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
darling = '0.20'
derive_more = "0.99"
itertools.workspace = true
parse_duration = "2.1"
proc-macro2 = '1.0'
quote = '1.0'
syn = { version = '1.0', features = ['visit'] }

[lib]
name = 'boomerang_derive'
proc-macro = true
