[package]
name = "boomerang_derive"
description = "Derive macros for Boomerang"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true

[dependencies]
darling = "0.20"
parse_duration = "2.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive"] }

[lib]
name = "boomerang_derive"
proc-macro = true
