[package]
name = "boomerang_federated"
description = "Federated protocol and RTI coordination primitives for Boomerang."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
exclude.workspace = true

[features]
default = ["serde", "serde-json-codec"]

## Serde derives for wire protocol and topology types
serde = ["dep:serde"]

## JSON-backed serde payload codec for tests and first adapters
serde-json-codec = ["serde", "dep:serde_json"]

[dependencies]
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
