[package]
name = "boomerang_federated"
description = "Federated protocol and RTI coordination primitives for Boomerang."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
exclude.workspace = true

[features]
default = ["serde", "serde-json-codec"]

## Serde derives for wire protocol and topology types
serde = ["dep:serde"]

## JSON-backed serde payload codec for tests and first adapters
serde-json-codec = ["serde", "dep:serde_json", "dep:tokio-serde"]

## Checked conversions and scheduler bridge support for boomerang_runtime types
runtime = ["dep:boomerang_runtime", "boomerang_runtime/federated", "dep:tracing"]

[dependencies]
futures-channel = { version = "0.3", features = ["sink"] }
futures-util = { version = "0.3", features = ["sink"] }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { version = "1.52", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tokio-serde = { version = "0.9", features = ["json"], optional = true }
tokio-util = { version = "0.7", features = ["codec"] }
boomerang_runtime = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
boomerang_util = { workspace = true, features = ["test-tracing"] }
