[package]
name = "boomerang_macros"
description = "Macros for Boomerang"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true

[dependencies]
attribute-derive = { version = "0.10", features = ["syn-full"] }
convert_case = "0.6"
parse_duration = "2.1"
proc-macro-error2 = { version = "2", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
boomerang.workspace = true

[lib]
name = "boomerang_macros"
proc-macro = true
