[package]
name = "boomerang_runtime"
description = "Runtime types and discrete event executor for Boomerang."
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[features]
default = [
    #"parallel"
]

## Support for parallel execution
parallel = ["dep:rayon"]

## Support for serialization
serde = [
    #    "dep:arrow",
    #    "dep:erased-serde",
    "dep:serde",
    #    "dep:serde_arrow",
    #    "dep:serde_flexitos",
    #    "dep:linkme",
    #    "dep:paste",
    "time/serde",
]

[dependencies]
#arrow = { workspace = true, optional = true, features = ["prettyprint"] }
crossbeam-channel = "0.5"
document-features = { workspace = true }
downcast-rs = "1.2"
erased-serde = { workspace = true, optional = true }
itertools.workspace = true
linkme = { workspace = true, optional = true }
paste = { version = "1", optional = true }
rayon = { version = "1.7", optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
#serde_arrow = { workspace = true, optional = true, features = ["arrow-52"] }
#serde_flexitos = { workspace = true, optional = true, features = ["id_trait"] }
thiserror.workspace = true
time.workspace = true
tinymap.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
tracing-tracy.workspace = true
