[package]
name = "boomerang_runtime"
description = "Runtime types and discrete event executor for Boomerang."
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[features]
default = [
    #"parallel",
    "replay",
]

## Support for parallel execution
parallel = ["dep:rayon"]

## Support for serialization
serde = ["dep:serde", "time/serde"]

## Support for recording and replaying events
replay = ["serde"]

[dependencies]
kanal = "0.1"
document-features = { workspace = true }
downcast-rs = "1.2"
itertools.workspace = true
linkme = { workspace = true, optional = true }
paste = { version = "1", optional = true }
rayon = { version = "1.7", optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror.workspace = true
time = { workspace = true }
tinymap.workspace = true
tracing.workspace = true

tokio = { version = "1.0", features = ["full"] }
tokio-serde = { version = "0.9", features = ["json"] }
tokio-util = { version = "*" }
serde_json = "*"
futures = "*"

mcap = "0.18"
foxglove = "0.7"
memmap2 = "0.9"
bytes = "1.10"
schemars = "0.8"

[dev-dependencies]
tracing-subscriber.workspace = true
tracing-tracy.workspace = true
