[package]
name = "boomerang_runtime"
description = "Runtime types and discrete event executor for Boomerang."
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[features]
default = []

## Support for parallel execution
parallel = ["dep:rayon"]

## Support for serialization
serde = ["dep:serde", "time/serde"]

## Support for recording and replaying events
replay = [
    "serde",
    "dep:mcap",
    "dep:foxglove",
    "dep:memmap2",
    "dep:serde_json",
    "dep:bytes",
]

[dependencies]
kanal = "0.1"
document-features = { workspace = true }
downcast-rs = "1.2"
itertools.workspace = true
pin-project = "1.1"
rayon = { version = "1.7", optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror.workspace = true
time = { workspace = true }
tinymap.workspace = true
tracing.workspace = true
variadics_please.workspace = true

# replay dependencies
bytes = { version = "1.10", optional = true }
mcap = { version = "0.24", optional = true }
foxglove = { version = "0.17", optional = true }
memmap2 = { version = "0.9", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true
tracing-tracy.workspace = true
