[package]
name = "boomerang_tinymap"
description = "A tiny, fast, and simple Slotkey-type map implementation for Boomerang."
version.workspace = true
readme = "README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fixedbitset = "0.5"

[dev-dependencies]
itertools = { workspace = true }
