[package]
name = "boomerang_tinymap"
description = "A tiny, fast, and simple Slotkey-type map implementation for Boomerang."
version.workspace = true
readme = "README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[features]
default = ["serde"]

## Support for serialization
serde = ["dep:serde"]

[dependencies]
document-features = { workspace = true }
fixedbitset = { version = "0.5" }
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
itertools = { workspace = true }
serde_json = "*"
