[package]
name = "boomerang_tinymap"
description = "A tiny, fast, and simple Slotkey-type map implementation for Boomerang."
version.workspace = true
readme = "README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[features]
default = ["serde", "rayon"]

## Support for serialization
serde = ["dep:serde"]
rayon = ["dep:rayon"]

[dependencies]
document-features = { workspace = true }
fixedbitset = { version = "0.5" }
serde = { workspace = true, optional = true, features = ["derive"] }
rayon = { workspace = true, optional = true }

[dev-dependencies]
itertools = { workspace = true }
serde_json = "*"
