[package]
name = "boomerang_util"
description = "Utilities for Boomerang"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[features]
default = []

## Support for built-in CLI/runner methods
runner = ["dep:clap", "dep:anyhow", "boomerang/graphviz"]

## Support for serde serialization
serde = ["boomerang/serde", "dep:serde"]

## Support for recording and replaying
replay = ["boomerang/replay", "serde"]

[dependencies]
anyhow = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
clap = { version = "4.2", features = ["derive"], optional = true }
document-features = { workspace = true }
serde = { workspace = true, optional = true }
tracing.workspace = true
linkme = { workspace = true, optional = true }

boomerang.workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true }
