[package]
name = "snake"
description = "Snake example"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
boomerang = { workspace = true, features = ["derive"] }
boomerang_util = { workspace = true, features = ["runner"] }
tracing = { workspace = true }

# Deps for Snake example
[target.'cfg(not(windows))'.dependencies]
rand = { version = "0.8" }
termcolor = { version = "1.2" }
termion = { version = "2.0" }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[lib]
name = "keyboard_events"
path = "src/keyboard_events.rs"

[[example]]
name = "keyboard"
