[package]
name = "snake"
description = "Snake example"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
boomerang = { workspace = true, features = ["derive"] }
boomerang_util = { workspace = true, features = ["runner"] }
tracing = { workspace = true }

# Deps for Snake example
rand = { version = "0.8" }
crossterm = { version = "0.28"}

[dev-dependencies]
tracing-subscriber = { workspace = true }

[[example]]
name = "keyboard"
path = "src/keyboard.rs"
