[package]
name = "snake"
description = "Snake example"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
boomerang = { workspace = true, features = ["derive", "replay", "parallel"] }
boomerang_util = { workspace = true, features = ["runner", "replay"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Deps for Snake example
rand = { version = "0.8" }
crossterm = { version = "0.28", features = ["serde"] }

[[example]]
name = "keyboard"
path = "src/keyboard.rs"
